--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -1151,4 +1151,50 @@ body {
   font-weight: 200;
   font-style: italic;
   margin-bottom: 1rem;
+}
+
+.footer {
+  display: block;
+  position: relative;
+  background-color: rgb(54, 51, 47);
+  background: url("../../assets/img/pat.webp");
+  height: 656px;
+  background-color: white;
+}
+.footer__container {
+  height: 100%;
+}
+.footer__dark {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 0.7;
+}
+.footer__wrap {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 1038px) {
+  .footer__wrap {
+    flex-direction: column;
+  }
+}
+.footer__left {
+  width: 48%;
+  padding-top: 26px;
+}
+@media (max-width: 1038px) {
+  .footer__left {
+    width: 100%;
+  }
+}
+@media (max-width: 1038px) {
+  .footer__right {
+    width: 100%;
+  }
 }/*# sourceMappingURL=index.css.map */
