--- a/src/sass/components/_courses.scss
+++ b/src/sass/components/_courses.scss
@@ -45,7 +45,7 @@
 
 	&__item {
 		width: 100%;
-		background: $green;
+		background: rgb(255, 255, 255);
 		-webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
 		-moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
 		box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
@@ -117,8 +117,8 @@
 .enroll {
 	padding: 20px 0;
 	width: 50%;
-	background-color: white;
-	border: 1px solid white;
+	background-color: $green;
+	border: 1px solid $green;
 	transition: all 0.1s ease;
 	-webkit-transition: all 0.1s ease;
 	-moz-transition: all 0.1s ease;
@@ -128,7 +128,7 @@
 	&:hover {
 		cursor: pointer;
 		background: none;
-		color: white;
+		color: $green;
 	}
 }
 
