--- a/src/sass/css/index.css
+++ b/src/sass/css/index.css
@@ -1611,7 +1611,7 @@ body {
 }
 .courses__item {
   width: 100%;
-  background: rgb(179, 209, 182);
+  background: rgb(255, 255, 255);
   -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
   box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
@@ -1681,8 +1681,8 @@ body {
 .enroll {
   padding: 20px 0;
   width: 50%;
-  background-color: white;
-  border: 1px solid white;
+  background-color: rgb(179, 209, 182);
+  border: 1px solid rgb(179, 209, 182);
   transition: all 0.1s ease;
   -webkit-transition: all 0.1s ease;
   -moz-transition: all 0.1s ease;
@@ -1692,7 +1692,7 @@ body {
 .enroll:hover {
   cursor: pointer;
   background: none;
-  color: white;
+  color: rgb(179, 209, 182);
 }
 
 .more {
